# People-Analytics-IT-Services-Workforce-Analytics

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analytics/: attrition_analysis.py  executive_kpis.py  manager_effect.py  pay_fairness.py  retention_analysis.py  statistics.py
backend/app/: main.py
dashboard/: app.py
dashboard/pages/: 1_Executive.py  2_Attrition.py  3_Manager_Effect.py  4_Pay_Fairness.py  5_Retention.py
data/processed/: model_metrics.json
data/synthetic/: employees.csv  exit_records.csv  exits.csv  learning.csv  managers.csv  performance.csv  project_assignments.csv  projects.csv  salary_history.csv
data_generator/: employee_generator.py  exit_generator.py  generate_dataset.py  learning_generator.py  manager_generator.py  performance_generator.py  project_generator.py  salary_generator.py
database/: load_data.py  schema.sql  seed.sql
dbt/peoplelens/: dbt_project.yml  profiles.yml
docs/: validation_report.json
docs/adr/: ADR-001-PostgreSQL.md  ADR-002-dbt.md  ADR-003-XGBoost.md  ADR-004-Streamlit.md
docs/memo/: CHRO_Memo.md
ml/: evaluate.py  feature_engineering.py  predict.py  shap_analysis.py  train.py
models/: .gitkeep
sql/: 01_headcount.sql  02_attrition.sql  03_manager_effect.sql  04_salary.sql  05_learning.sql  06_retention.sql  07_projects.sql  08_dashboard_queries.sql  schema.sql  workforce_queries.sql
src/analytics/: manager_effect.py  retention_analysis.py
src/ml/: predict.py  (+4 more)
tests/: test_api.py  test_models.py
(+30 files in other folders)
