[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "peoplelens"
version = "0.1.0"
description = "PeopleLens — Workforce Analytics Platform for IT Services (People Analytics, Problem A4)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["people-analytics", "hr-analytics", "attrition", "workforce", "machine-learning"]

[project.urls]
Repository = "https://github.com/saiganeshgudla/People-Analytics-IT-Services-Workforce-Analytics"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = [
    "tests/*",
    "data_generator/*",
    ".venv/*",
    "venv/*",
]
